focus visible fix

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     margin: 0px;
 }
 
-*:focus {
+*:focus-visible {
     background: var(--primary-900);
     color: var(--primary-200);
 }
@@ -66,7 +66,7 @@ body {
 
     transition: color, text-shadow 0.2s ease    ;
 }
-.toolbar-button > a:focus {
+.toolbar-button > a:focus-visible {
     text-shadow: none;
 }
 
